# TileDB-Video-Py

./: .gitignore  .pre-commit-config.yaml  README.md  api.py  setup.cfg  split_merge.py  video.py
.github/workflows/: ci.yml
examples/: tiledb-video.ipynb
tests/: test_api.py
tiledb/video/: __init__.py  api.py  cli.py  iter_segments.py  peekable.py  reader.py  utils.py  writer.py
