[metadata]
name = tiledb-video
version = 0.1.0
description = TileDB Python library for supporting video streams
author = TileDB, Inc.
author_email = help@tiledb.io
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
keywords = tiledb, video
url = https://github.com/TileDB-Inc/TileDB-Video-Py
project_urls =
    Documentation = https://docs.tiledb.com
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Multimedia
    Topic :: Multimedia :: Video
    Topic :: Multimedia :: Video :: Conversion
    Topic :: Software Development
    Topic :: Software Development :: Libraries

[options]
packages =
    tiledb.video
python_requires = >=3.7
install_requires =
    av >= 8.0.3
    Pillow >= 8.2.0
    tiledb >= 0.8.9

[flake8]
ignore = E501, B950
select = B,C,E,F,W,T4,B9
exclude = .git
per-file-ignores =
    __init__.py: F401, F403

[mypy]
show_error_codes = True
ignore_missing_imports = True

# Disallow dynamic typing
disallow_any_decorated = True
#disallow_any_unimported = True
#disallow_any_expr = True
#disallow_any_explicit = True
disallow_any_generics = True
disallow_subclassing_any = True

# Untyped definitions and calls
disallow_untyped_calls = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
disallow_untyped_decorators = True

# None and Optional handling
no_implicit_optional = True
strict_optional = True

# Configuring warnings
warn_redundant_casts = True
warn_unused_ignores = True
warn_no_return = True
warn_return_any = True
warn_unreachable = True

# Miscellaneous strictness flags
implicit_reexport = False
strict_equality = True
